[package]
name = "charting_tools"
version = "1.0.4"
edition = "2021"
authors = ["Enrico Dalla Cia", "Matteo Bregola", "Marco Pulze", "Riccardo Libanora"]
description = "curated collection of utilities to help the robot navigate and discover the map while saving its important parts"
readme = "README.md"

[dependencies]
robotics_lib = {registry = "kellnr"}
petgraph = "0.6.4"
lazy_static = "1.4.0"
